samples/_failures_safe/1761597082_15007b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a8f62df8.c: In function ‘tokenize’:
./samples/SAFE/__tmp_a8f62df8.c:169:5: error: expected expression at end of input
  169 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_a8f62df8.c:169:5: error: expected declaration or statement at end of input
